mysql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  namespace: sts-demo
spec:
  selector:
    matchLabels:
      app: mysql-app
  serviceName: mysql-svc
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: rootroot
        name: mysql
        image: mysql:8.4
        ports:
        - containerPort: 3306
          name: web
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: ebs-sc-mysql
      resources:
        requests:
          storage: 1Gi
