phpmyadmin-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: sts-demo
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin:5.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
