mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: sts-demo
spec:
  selector:
    app: mysql-app
  ports:
  - port: 3306
  clusterIP: None
