phpmyadmin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-svc
  namespace: sts-demo
spec:
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
